--- a/static/index.html
+++ b/static/index.html
@@ -5,14 +5,24 @@
 	<title>MERNa-NE</title>
 </head>
 <body>
-	<h1>MERNa: This is a Node.js and Express hosted Microsoft Azure Template</h1>
-	<p>This repository serves as a template that can be used to create a Node.js and Express based website that can easily
-	be hosted on Microsoft Azure.</p><br />
+	<h1>MERNa: This is a Dice Roller Server that tests the RESTful APIs using Node.js and Express hosted on Microsoft Azure</h1>
 
-	MERNa stands for MongoDB, Express, React, abd Node on Azure.
+	<button onclick="getRandom()">Call /random-num API</button>
 
-	Additional application functionality includes:<br />
-	<a href="fetching-from-server.html">Accessing Node.js Server-Side Application Programming Interfaces (APIs)</a><br />
-	<a href="fetching-remote-dog-breeds.html">Accessing Remote Application Programming Interfaces (APIs)</a>
+     <!-- None will get replaced with the random number-->
+    <p>Result: <span id="result">None</span></p>
+
+    <script>
+        async function getRandom() {
+			//Sends a request to the Node.js server endpoint "/random-num"
+            const response = await fetch('/random-num');
+
+			//Converts the server's JSON response into a JavaScript object
+            const data = await response.json();
+
+			//Updates the "None" with the random number
+            document.getElementById("result").textContent = data.dice;
+        }
+    </script>
 </body>
 </html>
